Merge pull request #10 from datacleaner/core-project-on-new-java
Remove legacy modules, drop serialization, upgrade to Java 21